--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Home Inventory Manager</string>
+    <string name="more"><![CDATA[>]]></string>
     <string-array name="category_array">
         <item>Living Room</item>
         <item>Kitchen</item>
